--- a/download.html
+++ b/download.html
@@ -59,7 +59,7 @@
               <h4>1.13.2 without Forge</h4>
             </div>
             <div class="panel-body">
-              <a target="_blank" href="gimme a min" class="btn btn-default btn-lg"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
+              <a target="_blank" href="https://github.com/skillclient/skillclient.github.io/raw/main/downloads/mcp/skillclient-1.13.2-b12.1.zip" class="btn btn-default btn-lg"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
             </div>
           </div>
         </div>
@@ -71,7 +71,7 @@
               <h4>1.12.2 with Forge</h4>
             </div>
             <div class="panel-body">
-              <a target="_blank" href="gimme a min" class="btn btn-default btn-lg"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
+              <a target="_blank" href="https://github.com/skillclient/skillclient.github.io/raw/main/downloads/forge/skillclient-1.12.2-b12.0.jar" class="btn btn-default btn-lg"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
             </div>
             <div class="panel-footer">
               <i class="fa fa-download" aria-hidden="true"></i> Download Forge <i class="fa fa-download" aria-hidden="true"></i> Download Optifine <i class="fa fa-download" aria-hidden="true"></i> Download Worldedit <i class="fa fa-download" aria-hidden="true"></i> Download JourneyMap <i class="fa fa-download" aria-hidden="true"></i> Download Just enough Items
@@ -87,7 +87,7 @@
               <h4>1.11.2 with Forge</h4>
             </div>
             <div class="panel-body">
-              <a target="_blank" href="gimme a min" class="btn btn-default btn-lg"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
+              <a target="_blank" href="https://github.com/skillclient/skillclient.github.io/raw/main/downloads/forge/skillclient-1.11.2-pre4-b9.0.jar" class="btn btn-default btn-lg"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
             </div>
             <div class="panel-footer">
               <i class="fa fa-download" aria-hidden="true"></i> Download Forge <i class="fa fa-download" aria-hidden="true"></i> Download Optifine <i class="fa fa-download" aria-hidden="true"></i> Download Worldedit <i class="fa fa-download" aria-hidden="true"></i> Download JourneyMap <i class="fa fa-download" aria-hidden="true"></i> Download Just enough Items <i class="fa fa-download" aria-hidden="true"></i> Download Waila
@@ -113,7 +113,7 @@
               <h4>1.8 without Forge</h4>
             </div>
             <div class="panel-body">
-              <a target="_blank" href="gimme a min" class="btn btn-default btn-lg"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
+              <a target="_blank" href="https://github.com/skillclient/skillclient.github.io/raw/main/downloads/mcp/SkillClient-1.8.8-b8.1.zip" class="btn btn-default btn-lg"><i class="fa fa-download" aria-hidden="true"></i> Download</a>
             </div>
           </div>
         </div>
