--- a/download.html
+++ b/download.html
@@ -49,7 +49,7 @@
     <div class="row">
       <div class="col-md-12">
         <h1 class="page-header">Download</h1>
-        <h5>1.8 without forge was found on https://minecraftcheats.ru (I checked the src and it's safe), everything else was downloaded from the orginal site.</h5>
+        <h5><a href="https://github.com/skillclient/skillclient.github.io/issues">Report Bugs</a></h5>
       </div>
       <div class="row" id="1.13">
         <div class="col-md-6"></div>
